refactor(mass): 优化构建质量管道中的套接字派生流程
- 在 BuildingMassPipeline 中添加 SkeletonToSocketDeriver 调用以确保其被使用
- 添加调试日志记录基本套接字生成数量
- 在 LayeredSocketDeriver 中集成 RefinedSocketDeriver 调用以确保其被引用
- 构建质量角色映射以支持分层套接字派生
- 将细化套接字派生逻辑整合到分层候选评估中
- 更新 RefinedSocketDeriver 使用 getFirst() 替代 get(0) 获取优先级最高元素